@@ -2,7 +2,7 @@ package library;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -15,8 +15,11 @@ import javafx.scene.control.Label;
 import javafx.scene.control.ListView;
 import javafx.scene.control.TextField;
 import javafx.stage.Stage;
+import javafx.fxml.Initializable;
+import java.net.URL;
+import java.util.ResourceBundle;
 
-public class TelaUsuarioController {
+public class TelaUsuarioController implements Initializable {
 
     @FXML
     private Button botaoBuscar;
@@ -28,7 +31,7 @@ public class TelaUsuarioController {
     protected Label labelNomeBiblioteca3;
 
     @FXML
-    private ListView<String> listaResultados;
+    private ListView<String> listaLivros;
 
     @FXML
     private Button botaoSair;
@@ -42,39 +45,45 @@ public class TelaUsuarioController {
     @FXML
     private Button botaoIrRenovacoes;
 
-    private List<String> listaLivros = new ArrayList<>();
 
-    /*@FXML
-    public void initialize() {
-        // Cadastra os livros
-        /*App.getBiblioteca().cadastrarLivro(new Livro("1","1984", "a", List.of("George Orwell")));
-        App.getBiblioteca().cadastrarLivro(new Livro("2","Dom Casmurro", "b", List.of("Machado de Assis")));
-        
-        for (Livro livro : App.getBiblioteca().getLivros()) {
-            // Adiciona o livro a lista
-            listaLivros.add(livro.getTitulo());
-        }
-        // Exibe a lista no listView
-        listaResultados.setItems(FXCollections.observableArrayList(listaLivros));
-    }*/
+    @Override
+    public void initialize(URL location, ResourceBundle resources) {
+        listaLivros.setItems(
+            FXCollections.observableArrayList(
+                App.getBiblioteca().getAcervo()
+                    .values()
+                    .stream()
+                    .filter(e -> e.getDisponibilidade())
+                    .map(e -> ((Livro) e).getTitulo())
+                    .toList()
+            )
+        );
+    }
+
 
     @FXML
     void fazerBusca(ActionEvent event) {
+        Map<String, Emprestavel> acervo = App.getBiblioteca().getAcervo();
         String termo = campoBusca.getText().trim().toLowerCase();
-
-        List<String> resultados = listaLivros.stream()
-                .filter(livro -> livro.toLowerCase().contains(termo))
-                .collect(Collectors.toList());
-
-        listaResultados.setItems(FXCollections.observableArrayList(resultados));
-
-        if (resultados.isEmpty()) {
+        
+        EmprestavelTituloFilter filter = new EmprestavelTituloFilter();
+        ArrayList<Emprestavel> resultados = filter.aplica(acervo, termo);
+        List<String> resultadosString = resultados
+                        .stream()
+                        .filter(e -> e.getDisponibilidade())
+                        .map(e -> ((Livro) e).getTitulo().toLowerCase())
+                        .filter(e -> e.contains(termo))
+                        .toList();
+                    
+        if (resultadosString.isEmpty()) {
             Alert alert = new Alert(Alert.AlertType.INFORMATION);
             alert.setTitle("Busca");
             alert.setHeaderText(null);
             alert.setContentText("Nenhum livro encontrado.");
             alert.showAndWait();
         }
+
+        listaLivros.setItems(FXCollections.observableArrayList(resultadosString));
     }
 
 
